# terra_trace

./: README.md
helper_code/: copilot_example.py  derive_data_from_google_earth_engine.py  google_earth_engine.py  transform.py
plugin_lib/: pyproject.toml  start_plugin.sh
plugin_lib/plugin_lib/: config.py  constants.py  spec.py  storage.py  tool.py  utils.py
plugin_lib/plugin_lib/cli/: container.py  container_app.py  helper.py  local.py  main.py  manifest.py  parser.py  wrappers.py
plugin_lib/plugin_lib/cli/templates/: module.py  plugin.yaml
plugin_lib/plugin_lib/scripts/: main.py  run_data_scripts.py
plugins/: angela.json  ndvi_image_gallery.html  plugin.yaml  print.py  server.py  test.py
plugins/california_dataset/: dataset_info.txt
plugins/files/: Dockerfile  angela.json  ndvi_image_gallery.html
plugins/static/: map.html  ndvi_image_gallery.html
plugins/wildfire_data/: cb_2021_us_state_20m.shp.ea.iso.xml  cb_2021_us_state_20m.shp.iso.xml
